# django-cid

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini  travis.yml
.github/workflows/: ci.yml
cid/: __init__.py  apps.py  cursor.py  locals.py  log.py  middleware.py
cid/backends/mysql/: base.py
cid/backends/oracle/: base.py
cid/backends/postgis/: base.py
cid/backends/postgresql/: base.py
cid/backends/sqlite3/: base.py
cid/locals/: __init__.py  base.py  thread_local.py
docs/: Makefile  api.rst  cid.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  releasing.rst  settings.rst  usage.rst
requirements/: base.txt  ci.txt  docs.txt  quality.txt  tests.txt
sandbox/: manage.py  settings.py  urls.py  views.py  wsgi.py
sandbox/sandbox/: settings.py  urls.py  wsgi.py
sandbox/testapp/: models.py  urls.py  views.py
sandbox/testapp/migrations/: 0001_initial.py
sandbox/testapp/templates/testapp/: testit.html
src/cid/: __init__.py  apps.py  context_processors.py  log.py  middleware.py
src/cid/backends/oracle/: base.py
src/cid/backends/postgis/: base.py
src/cid/backends/postgresql/: base.py
src/cid/backends/sqlite3/: base.py
src/cid/locals/: __init__.py  base.py  context.py
tests/: test_context_processors.py  test_cursor.py  test_locals.py  test_middleware.py
