[metadata]
name = django-cid
version = 3.1.dev0
description = Correlation IDs in Django for debugging requests
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://django-correlation-id.readthedocs.io/
author = Snowball One
author_email = opensource+django-cid@polyconseil.fr
maintainer = Polyconseil
maintainer_email = opensource+django-cid@polyconseil.fr
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = django logging correlation id debugging
platform = any
project_urls =
    Documentation = https://django-correlation-id.readthedocs.io/
    Source = https://github.com/Polyconseil/django-cid
    Bug Tracker =  https://github.com/Polyconseil/django-cid/issues
    Changelog = https://django-correlation-id.readthedocs.io/en/latest/history.html


[options]
python_requires = >=3.8
install_requires =
    django>=3.1
package_dir=
    =src
packages=find:

[options.packages.find]
where = src

[zest.releaser]
create-wheel = yes